Updates to composer file

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@ files-private
 /web/sites/*/settings.local.php
 .env
 local.yml
+/.csslintrc
+/.editorconfig
+/.eslintignore
+/.eslintrc.json
+/.gitattributes
+/.ht.router.php
+/.htaccess
+/INSTALL.txt
+/README.md
+/autoload.php
+/example.gitignore
+/index.php
+/robots.txt
+/update.php
+/web.config
